--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.1.4
+  intl: ^0.18.1
   persistent_bottom_nav_bar: ^5.0.2
   shared_preferences: ^2.2.0
 
